--- a/Clase 8/Tarea 1 clase 6/tarea1.html
+++ b/Clase 8/Tarea 1 clase 6/tarea1.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="tarea1.css">
     <title>Tarea 1 - Clase 6</title>
 </head>
@@ -11,27 +13,30 @@
 
 
 <form action="" id="calcular-edades">
-
-    <label for="">Ingrese la cantidad de integrantes: </label>
-    <input type="number" id="cantidad-integrantes">
-    <button type="submit" id="ingresar">Siguiente</button>
+    <div id="ingreso">
+        <label for="">Ingrese la cantidad de integrantes: </label>
+        <input type="number" id="cantidad-integrantes">
+        <button type="submit" id="ingresar">Siguiente</button>
+    </div>
 
     <div id="integrantes">
-
     </div>
 
     <ul id="errores">
     </ul>
 
-    <button type="button" id="calcular" class="oculto">Calcular</button>
+    <div>
+        <button type="button" id="calcular" class="oculto">Calcular</button>
+    </div>
 
     <div id="datos" class="oculto">
         <p>La mayor edad es: <strong id="mayor-edad"></strong></p>
         <p>La menor edad es: <strong id="menor-edad"></strong></p>
         <p>El promedio de edad es: <strong id="promedio-edad"></strong></p>
     </div>
-
-    <button type="reset" id="resetear">Resetear</button>
+    <div>
+        <button type="reset" id="resetear">Resetear</button>
+    </div>
 
 </form>
 
